--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "stof/doctrine-extensions-bundle": "^1.2",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "friendsofsymfony/jsrouting-bundle": "^1.5"
+        "friendsofsymfony/jsrouting-bundle": "^1.5",
+        "jms/serializer": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
